# PySizer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.ps1  start.sh
backend/: alembic.ini
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: projects.py
backend/app/services/: exports.py  project_queries.py  scan_coordinator.py  scanner.py  snapshots.py
backend/tests/: conftest.py  test_persistence.py  test_project_queries.py  test_projects_api.py  test_scan_coordinator.py  test_scanner.py  test_schemas.py
docs/: IMPLEMENTATION_PLAN.md  Py-sizer-prompt.md  SPEC.md  implementation-summary-cross-platform-launchers.md  implementation-summary-pysizer-hardening.md
docs/superpowers/plans/: 2026-07-14-pysizer-hardening.md
docs/superpowers/specs/: 2026-07-14-cross-platform-launchers-design.md  2026-07-14-pysizer-hardening-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/components/: Charts.tsx  Platter.tsx  ProjectForm.tsx  ProjectList.tsx  StatsCards.tsx  ThemeSelector.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
